syntax = "proto3";

option csharp_namespace = "ProductGrpcService";

package ProductPackage;

service ProductService {
	rpc GetProduct (ProductIdentityDto) returns (ProductSimpleDto);
	rpc CreateProduct(ProductSimpleDto) returns (ProductIdentityDto);
}

message ProductIdentityDto {
	int32 id = 1;
}

message ProductSimpleDto {
	int32 id = 1;
	string name = 2;
}